completed issue #5, added education section to the website

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       </header>
       <main>
         <section id="bio ">
+          <h2 class="text-center">About me</h2>
           <div class="row">
             <div class="col-5">
               <img src="./img/me5.jpg" alt="a handsome guy" id="bio_img" />
@@ -124,6 +125,60 @@
                   numquam repellat accusantium quis, labore quasi doloribus
                   quibusdam. Accusamus.
                 </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section id="education">
+          <h2 class="text-center">Education</h2>
+          <div class="row">
+            <div class="col-6">
+              <h3 class="text-center">Completed</h3>
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title text-center">Abiturient High School</h5>
+                  <p class="card-text">
+                    I switched lots of schools, 7 to be honest. All for
+                    different reasons. I do not really want to list all of them
+                    ,since there's no point for it, but the one from which I
+                    graduated
+                  </p>
+                </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item d-flex justify-content-between">
+                    <b>Years: </b><span> 2020-2022</span>
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between">
+                    <b>Location: </b> <span>12 Mir Ave</span>
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between">
+                    <b>Specialization: </b><span>STEM</span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-6">
+              <h3 class="text-center">Current</h3>
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title text-center">Langara College</h5>
+                  <p class="card-text">
+                    I am currently studying here for Computer Studies Diploma
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Exercitationem, tenetur quae! Officia eveniet fuga sunt
+                  </p>
+                </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item d-flex justify-content-between">
+                    <b>Years: </b><span> 2023-2025(Expected)</span>
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between">
+                    <b>Location: </b> <span>100 W 49th Ave</span>
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between">
+                    <b>Major: </b><span>Computer Science</span>
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
