--- a/index.html
+++ b/index.html
@@ -7,20 +7,14 @@
     <link rel="stylesheet" id="bootswatch" />
     <link rel="stylesheet" id="icon" />
     <link rel="stylesheet" href="./css/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
   </head>
   <body>
     <div class="container">
       <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">Erbol Kulantaev</a>
+            <a class="navbar-brand" href="#">Kulantaev Erbol</a>
             <button
               class="navbar-toggler"
               type="button"
@@ -32,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" href="#bio">Bio</a>
+                  <a class="nav-link" href="#bio">Bio</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#education">Education</a>
@@ -46,13 +40,14 @@
         </nav>
       </header>
       <main>
+        <hr class="m-5" />
         <section id="bio ">
           <h2 class="text-center">About me</h2>
           <div class="row">
-            <div class="col-5">
+            <div class="col-xs-12 col-md-5">
               <img src="./img/me5.jpg" alt="a handsome guy" id="bio_img" />
             </div>
-            <div class="col-7">
+            <div class="col-xs-12 col-md-7">
               <ul
                 class="nav nav-tabs d-flex justify-content-around"
                 id="myTab"
@@ -136,12 +131,20 @@
             </div>
           </div>
         </section>
+
+        <hr class="m-5" />
+
         <section id="education">
           <h2 class="text-center">Education</h2>
           <div class="row">
-            <div class="col-6">
+            <div class="col-xs-12 col-md-6">
               <h3 class="text-center">Completed</h3>
               <div class="card">
+                <img
+                  src="./img/abiturient-class1.jpg"
+                  alt="my high school class"
+                  class="card-img-top edu-img"
+                />
                 <div class="card-body">
                   <h5 class="card-title text-center">Abiturient High School</h5>
                   <p class="card-text">
@@ -164,9 +167,14 @@
                 </ul>
               </div>
             </div>
-            <div class="col-6">
+            <div class="col-xs-12 col-md-6">
               <h3 class="text-center">Current</h3>
               <div class="card">
+                <img
+                  src="./img/langara.jpg"
+                  alt="langara"
+                  class="card-img-top edu-img"
+                />
                 <div class="card-body">
                   <h5 class="card-title text-center">Langara College</h5>
                   <p class="card-text">
@@ -191,14 +199,14 @@
           </div>
         </section>
 
-        <!--  -->
+        <hr class="m-5" />
 
         <section id="skills">
           <h2 class="text-center">Skills</h2>
-          <h3>Frontend</h3>
+
           <div class="row">
-            <div class="col-6">
-              <!--  -->
+            <div class="col-xs-12 col-md-6">
+              <h3>Frontend</h3>
               <div class="accordion" id="frontendAccordion">
                 <!--  -->
                 <div class="accordion-item">
@@ -296,10 +304,9 @@
               </div>
             </div>
 
-            <div class="col-6">
-              <!--  -->
+            <div class="col-xs-12 col-md-6">
               <div class="accordion" id="backendAccordion">
-                <!--  -->
+                <h3 class="text-end">Backend</h3>
                 <div class="accordion-item">
                   <h3 class="accordion-header">
                     <button
@@ -404,6 +411,41 @@
           </div>
         </section>
       </main>
+      <footer class="text-center my-5 p-2 border border-1">
+        <p>@copyright 2024 Kulantaev Erbol</p>
+        <div class="btn-group">
+          <a
+            target="_blank"
+            href="https://www.linkedin.com/in/erbol-kulantaev-94a59b27a/"
+            class="btn btn-primary"
+            ><i class="fa-brands fa-linkedin"></i>
+          </a>
+          <a
+            target="_blank"
+            href="https://github.com/balabaII"
+            class="btn btn-primary"
+            ><i class="fa-brands fa-github"></i>
+          </a>
+          <a
+            target="_blank"
+            href="https://www.facebook.com/"
+            class="btn btn-primary"
+            ><i class="fa-brands fa-facebook"></i>
+          </a>
+          <a
+            target="_blank"
+            href="https://www.instagram.com/"
+            class="btn btn-primary"
+            ><i class="fa-brands fa-instagram"></i>
+          </a>
+          <a
+            target="_blank"
+            href="https://www.youtube.com/"
+            class="btn btn-primary"
+            ><i class="fa-brands fa-youtube"></i>
+          </a>
+        </div>
+      </footer>
     </div>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js"
